Fix header on small screens

--- a/design.css
+++ b/design.css
@@ -84,7 +84,8 @@ html[data-view="project"].ios body {
 }
 
 .header_text.right {
-	text-align: right;
+  width: 32%;
+  text-align: right;
   font-size: 54px;
 }
 
